--- a/aboutcss.css
+++ b/aboutcss.css
@@ -2,6 +2,7 @@
     --color1: orange;
     --color2: rgb(206, 153, 55);
     --color3: rgba(255, 216, 184, 0.457);
+    --margincommon: 2rem;
 }
 
 * {
@@ -68,6 +69,103 @@ body {
 
 .underlinePage {
     border-bottom: 2px solid var(--color1);
+    border-radius: 0px;
+}
+
+.banner1 {
+    margin-top: var(--margincommon);
+    width: 100%;
+    height: 60vh;
+    /* border: 1px solid black; */
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 9px 0px;
+}
+
+.banner2 {
+    width: 100%;
+    height: 50vh;
+    margin-block: var(--margincommon);
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.banner2Lhs {
+    height: 100%;
+    width: 66%;
+    font-size: 1.4rem;
+    display: flex;
+    margin-right: 4%;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    /* border: 1px solid black; */
+}
+
+.banner2Rhs {
+    height: 100%;
+    width: 26%;
+    /* border: 1px solid black; */
+    padding-inline: 2%;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--color3);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 9px 0px;
+
+    /* justify-content: space-evenly; */
+    align-items: center;
+    font-size: 1.3rem;
+}
+
+.aboutusContainer {
+    margin-top: var(--margincommon);
+    width: 100%;
+    /* height: 300vh; */
+    /* border: 1px solid black; */
+    display: grid;
+    gap: 3rem;
+    grid-template-columns: auto auto auto;
+}
+
+.hp,
+.su,
+.hk,
+.gs,
+.mt,
+.cs,
+.yd {
+    height: 90vh;
+
+    /* border: 1px solid rgba(0, 0, 0, 0.172); */
+    display: flex;
+    flex-direction: column;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 9px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.aboutusContainerImage {
+    border: 1px solid black;
+
+    width: 30%;
+    height: 15%;
+    border-radius: 50%;
+}
+
+.aboutusContainerName {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+}
+
+.aboutusContainerContent {
+    width: 85%;
+    height: 65%;
+    /* border: 1px solid black; */
+    background-color: rgba(0, 0, 0, 0.11);
 }
 
 .downloadContainer {
