--- a/customerscss.css
+++ b/customerscss.css
@@ -113,7 +113,8 @@ body {
 .bits,
 .kadi,
 .recmart {
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 9px 0px;
 }
 
 .cisco {
@@ -163,6 +164,43 @@ body {
 }
 .recmart {
     grid-area: recmart;
+}
+
+.customerTestimonialTitle {
+    margin-top: var(--margincommon);
+    display: flex;
+    align-items: flex-end;
+    height: 10vh;
+    width: 100%;
+    /* border: 1px solid black; */
+    font-size: 2rem;
+    justify-content: start;
+}
+
+.customerTestimonial {
+    width: 100%;
+    height: 50vh;
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.customerTestimonialsLhs {
+    width: 45%;
+    height: 75%;
+    border: 2px solid white;
+    box-shadow: rgba(100, 100, 111, 0.7) 0px 3px 10px 0px;
+}
+
+.customerTestimonialsRhs {
+    width: 45%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
 }
 
 .footer {
