--- a/resourcecentercss.css
+++ b/resourcecentercss.css
@@ -134,9 +134,64 @@ body {
     background-color: white;
     height: 50vh;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 9px 0px;
+    display: flex;
+    flex-direction: row;
+    padding: 2%;
+}
+
+.vidlhs {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.vidrhs {
+    width: 50%;
+    /* background-color: red; */
+    border-radius: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2%;
+}
+
+.blogSection {
+    margin-top: 5rem;
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color1);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 15px 5px;
+}
+.infoSection {
+    margin-top: 5rem;
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color1);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 15px 5px;
+}
+.selfSection {
+    margin-top: 5rem;
+    height: 90vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color1);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 15px 5px;
 }
 
 .footer {
+    margin-top: var(--margincommon);
     width: 100%;
     height: 40vh;
     display: flex;
